updated bibtex updater

--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -19,7 +19,93 @@ isbn="978-3-030-44584-3"
 	title	={JiangxiTecom Biochemistry Equipment Co., Ltd., Hematology Analyzers Biochemistry Analyzers Reagents},
 	year	={2022},
 	url	={https://en.tecom-cn.com/}
-	}@article{DBLP:journals/corr/abs-1802-10548,
+	}@article{Annie_Stuart_What_2022_webmd,
+	author	={Annie Stuart What},
+	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
+	year	={2022},
+	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
+}
+
+@article{Attacking_Any_Unknown_2022_clevelandclinic,
+author = {Attacking Any Unknown},
+title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
+year	 = {2022},
+url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
+}
+
+@article{CNN-IBM,
+	author	={IBM},
+	title	={What are Convolutional Neural Networks? | IBM},
+	year	={2020},
+	url	={https://www.ibm.com/cloud/learn/convolutional-neural-networks}
+	}@article{Clicking_On_2022_mayoclinic,
+author = {Clicking On},
+title	 = {Complete blood count (CBC) - Mayo Clinic},
+year	 = {2022},
+url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919}
+}
+
+@article{Department_2022_rochester,
+author = {Department},
+title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
+year	 = {2022},
+url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
+}
+
+@Article{Kouzehkanan2022,
+author={Kouzehkanan, Zahra Mousavi
+and Saghari, Sepehr
+and Tavakoli, Sajad
+and Rostami, Peyman
+and Abaszadeh, Mohammadjavad
+and Mirzadeh, Farzaneh
+and Satlsar, Esmaeil Shahabi
+and Gheidishahran, Maryam
+and Gorgi, Fatemeh
+and Mohammadi, Saeed
+and Hosseini, Reshad},
+title={A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm},
+journal={Scientific Reports},
+year={2022},
+month={Jan},
+day={21},
+volume={12},
+number={1},
+pages={1123},
+abstract={Accurate and early detection of anomalies in peripheral white blood cells plays a crucial role in the evaluation of well-being in individuals and the diagnosis and prognosis of hematologic diseases. For example, some blood disorders and immune system-related diseases are diagnosed by the differential count of white blood cells, which is one of the common laboratory tests. Data is one of the most important ingredients in the development and testing of many commercial and successful automatic or semi-automatic systems. To this end, this study introduces a free access dataset of normal peripheral white blood cells called Raabin-WBC containing about 40,000 images of white blood cells and color spots. For ensuring the validity of the data, a significant number of cells were labeled by two experts. Also, the ground truths of the nuclei and cytoplasm are extracted for 1145 selected cells. To provide the necessary diversity, various smears have been imaged, and two different cameras and two different microscopes were used. We did some preliminary deep learning experiments on Raabin-WBC to demonstrate how the generalization power of machine learning methods, especially deep neural networks, can be affected by the mentioned diversity. Raabin-WBC as a public data in the field of health can be used for the model development and testing in different machine learning tasks including classification, detection, segmentation, and localization.},
+issn={2045-2322},
+doi={10.1038/s41598-021-04426-x},
+url={https://doi.org/10.1038/s41598-021-04426-x}
+}
+
+@article{SUDHA2020639,
+title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
+journal = {Biocybernetics and Biomedical Engineering},
+volume = {40},
+number = {2},
+pages = {639-648},
+year = {2020},
+issn = {0208-5216},
+doi = {https://doi.org/10.1016/j.bbe.2020.02.005},
+url = {https://www.sciencedirect.com/science/article/pii/S0208521620300267},
+author = {K. Sudha and P. Geetha},
+keywords = {Leukocytes, Microscopic blood images, Edge strength, Grabcut technique, Gradient circular hough transform},
+abstract = {Leukocytes count in the blood smear images plays an important role in identifying the overall health of the patient. The major steps involved in leukocytes counting system are segmentation and counting. However, the counting accuracy is greatly affected due to the morphological diversity of cells, the presence of staining artifacts and the overlapped cells. Therefore, this paper introduces a new framework to segment and counting of leukocytes. To segment leukocytes, an edge strength-based Grabcut method has been proposed. Later, the leukocyte region including the overlapped cells was counted using the novel gradient circular hough transform (GCHT) method. The research work was performed on ALL-IDB and Cellavision datasets. The proposed segmentation method has yielded high precision, recall and f-measure compared to the state-of-the-art methods. Additionally, comparison analysis was performed between the region count obtained using the existing and the GCHT method. The overall experimental results of the work showed that the proposed framework produced more accuracy in counting the leukocytes.}
+}
+
+@article{Zheng2018,
+  title={Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning},
+  author={Xin Zheng and Yong Wang and Guoyou Wang and Jianguo Liu},
+  journal={Micron},
+  volume={107},
+  pages={55--71},
+  year={2018},
+  publisher={Elsevier},
+  doi={https://doi.org/10.1016/j.micron.2018.01.010},
+  url={https://www.sciencedirect.com/science/article/pii/S0968432817303037}
+}
+
+@article{DBLP:journals/corr/abs-1802-10548,
   author    = {Carlos X. Hern{\'{a}}ndez and
                Mohammad M. Sultan and
                Vijay S. Pande},
@@ -47,20 +133,6 @@ isbn="978-3-030-44584-3"
   publisher={IEEE}
 }
 
-@article{Annie_Stuart_What_2022_webmd,
-	author	={Annie Stuart What},
-	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
-	year	={2022},
-	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
-}
-
-@article{Attacking_Any_Unknown_2022_clevelandclinic,
-author = {Attacking Any Unknown},
-title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
-year	 = {2022},
-url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
-}
-
 @article{bhavnani2016segmentation,
   title={Segmentation and counting of WBCs and RBCs from microscopic blood sample images},
   author={Bhavnani, Lata A and Jaliya, Udesang K and Joshi, Mahasweta J},
@@ -77,20 +149,19 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
 	title	={CellaVision News Blast – CellaVision AB},
 	year	={2022},
 	url	={https://blog.cellavision.com/}
-	}@article{Clicking_On_2022_mayoclinic,
-author = {Clicking On},
-title	 = {Complete blood count (CBC) - Mayo Clinic},
-year	 = {2022},
-url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919}
-}
-
-@article{Department_2022_rochester,
-author = {Department},
-title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
-year	 = {2022},
-url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
-}
-
+	}@ARTICLE{fukushima_Neocognitron,
+  author={Fukushima, Kunihiko and Miyake, Sei and Ito, Takayuki},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics}, 
+  title={Neocognitron: A neural network model for a mechanism of visual pattern recognition}, 
+  year={1983},
+  volume={SMC-13},
+  number={5},
+  pages={826-834},
+  abstract={A recognition with a large-scale network is simulated on a PDP-11/34 minicomputer and is shown to have a great capability for visual pattern recognition. The model consists of nine layers of cells. The authors demonstrate that the model can be trained to recognize handwritten Arabic numerals even with considerable deformations in shape. A learning-with-a-teacher process is used for the reinforcement of the modifiable synapses in the new large-scale model, instead of the learning-without-a-teacher process applied to a previous model. The authors focus on the mechanism for pattern recognition rather than that for self-organization.},
+  keywords={},
+  doi={10.1109/TSMC.1983.6313076},
+  ISSN={2168-2909},
+  month={Sep.},}
 @article{guiliang2016microscopic,
   title={Microscopic Cell Image Segmentation and Counting Algorithm Based on Image Definition.},
   author={Guiliang, FENG and Yiping, LU and Wei, PENG},
@@ -115,32 +186,6 @@ url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&
   number={3},
   pages={2448--2453},
   year={2011}
-}
-
-@Article{Kouzehkanan2022,
-author={Kouzehkanan, Zahra Mousavi
-and Saghari, Sepehr
-and Tavakoli, Sajad
-and Rostami, Peyman
-and Abaszadeh, Mohammadjavad
-and Mirzadeh, Farzaneh
-and Satlsar, Esmaeil Shahabi
-and Gheidishahran, Maryam
-and Gorgi, Fatemeh
-and Mohammadi, Saeed
-and Hosseini, Reshad},
-title={A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm},
-journal={Scientific Reports},
-year={2022},
-month={Jan},
-day={21},
-volume={12},
-number={1},
-pages={1123},
-abstract={Accurate and early detection of anomalies in peripheral white blood cells plays a crucial role in the evaluation of well-being in individuals and the diagnosis and prognosis of hematologic diseases. For example, some blood disorders and immune system-related diseases are diagnosed by the differential count of white blood cells, which is one of the common laboratory tests. Data is one of the most important ingredients in the development and testing of many commercial and successful automatic or semi-automatic systems. To this end, this study introduces a free access dataset of normal peripheral white blood cells called Raabin-WBC containing about 40,000 images of white blood cells and color spots. For ensuring the validity of the data, a significant number of cells were labeled by two experts. Also, the ground truths of the nuclei and cytoplasm are extracted for 1145 selected cells. To provide the necessary diversity, various smears have been imaged, and two different cameras and two different microscopes were used. We did some preliminary deep learning experiments on Raabin-WBC to demonstrate how the generalization power of machine learning methods, especially deep neural networks, can be affected by the mentioned diversity. Raabin-WBC as a public data in the field of health can be used for the model development and testing in different machine learning tasks including classification, detection, segmentation, and localization.},
-issn={2045-2322},
-doi={10.1038/s41598-021-04426-x},
-url={https://doi.org/10.1038/s41598-021-04426-x}
 }
 
 @inproceedings{labati2011all,
@@ -224,21 +269,6 @@ abstract = {Yeast fluorescence microscopic images are widely used to observe the
 	year = {2020}
 } 
 
-@article{SUDHA2020639,
-title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
-journal = {Biocybernetics and Biomedical Engineering},
-volume = {40},
-number = {2},
-pages = {639-648},
-year = {2020},
-issn = {0208-5216},
-doi = {https://doi.org/10.1016/j.bbe.2020.02.005},
-url = {https://www.sciencedirect.com/science/article/pii/S0208521620300267},
-author = {K. Sudha and P. Geetha},
-keywords = {Leukocytes, Microscopic blood images, Edge strength, Grabcut technique, Gradient circular hough transform},
-abstract = {Leukocytes count in the blood smear images plays an important role in identifying the overall health of the patient. The major steps involved in leukocytes counting system are segmentation and counting. However, the counting accuracy is greatly affected due to the morphological diversity of cells, the presence of staining artifacts and the overlapped cells. Therefore, this paper introduces a new framework to segment and counting of leukocytes. To segment leukocytes, an edge strength-based Grabcut method has been proposed. Later, the leukocyte region including the overlapped cells was counted using the novel gradient circular hough transform (GCHT) method. The research work was performed on ALL-IDB and Cellavision datasets. The proposed segmentation method has yielded high precision, recall and f-measure compared to the state-of-the-art methods. Additionally, comparison analysis was performed between the region count obtained using the existing and the GCHT method. The overall experimental results of the work showed that the proposed framework produced more accuracy in counting the leukocytes.}
-}
-
 @inproceedings{sarrafzadeh2014selection,
   title={Selection of the best features for leukocytes classification in blood smear microscopic images},
   author={Sarrafzadeh, Omid and Rabbani, Hossein and Talebi, Ardeshir and Banaem, Hossein Usefi},
@@ -263,17 +293,5 @@ abstract = {Leukocytes count in the blood smear images plays an important role i
   author={Tran, Thanh and Minh, Lam Binh and Lee, Suk-Hwan and Kwon, Ki-Ryong},
   year={2019},
   publisher={Preprints}
-}
-
-@article{Zheng2018,
-  title={Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning},
-  author={Xin Zheng and Yong Wang and Guoyou Wang and Jianguo Liu},
-  journal={Micron},
-  volume={107},
-  pages={55--71},
-  year={2018},
-  publisher={Elsevier},
-  doi={https://doi.org/10.1016/j.micron.2018.01.010},
-  url={https://www.sciencedirect.com/science/article/pii/S0968432817303037}
 }
 
