--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -91,7 +91,7 @@ Abnormal test results could be an indication of a serious health problem or a si
 These are some of the health problems that can be identified by a CBC:
 
 \begin{itemize}
-  \item Anemia (low iron)
+  \item Anemia
   \item Autoimmune disorders
   \item Bone marrow problems
   \item Leukemia (Cancer)
