Added chapter 4 AI definition and machine learning definition with linear regression and SVM!

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -82,7 +82,7 @@ A complete blood count is a common blood test that is done for a variety of reas
   \item \textbf{To review the overall health:} A doctor may recommend a complete blood count as part of a routine medical examination to monitor your general health and to screen for a variety of disorders, such as anemia or leukemia.
   \item \textbf{To diagnose a medical condition:} A doctor may suggest a complete blood count if you're experiencing weakness, fatigue, fever, inflammation, bruising or bleeding. A complete blood count may help diagnose the cause of these signs and symptoms. If a doctor suspects someone with an infection, the CBC test can help confirm that diagnosis.
   \item \textbf{To monitor a medical condition:} If you've been diagnosed with a blood disorder that affects blood cell counts, the doctor may use complete blood counts to monitor your condition.
-  \item \textbf{To monitor medical treatment:} A complete blood count may be used to monitor your health if you're taking medications that may affect blood cell counts. \textsuperscript{\cite{Clicking_On_2022_mayoclinic}}
+  \item \textbf{To monitor medical treatment:} A complete blood count may be used to monitor your health if you're taking medications that may affect blood cell counts. \textsuperscript{\cite{CBC-mayoclinic}}
 \end{itemize}
 
 \subsection{Diseases identified by a complete blood count}
