--- a/ressources/bibtex/Clicking_On_2022_mayoclinic.bib
+++ b/ressources/bibtex/Clicking_On_2022_mayoclinic.bib
@@ -1,5 +1,5 @@
-@article{Clicking_On_2022_mayoclinic,
-author = {Clicking On},
+@article{CBC-mayoclinic,
+author = {mayoclinic},
 title	 = {Complete blood count (CBC) - Mayo Clinic},
 year	 = {2022},
 url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919}
