Fixed bibtex references!

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -31,11 +31,11 @@ Diseases of the red blood cells include many types of anemia. This is a conditio
 
 People with anemia may have red blood cells that have an abnormal shape or that look normal, larger than normal, or smaller than normal.
 
-Symptoms of anemia include tiredness, fast heart rate, pale skin, feeling cold, and, in severe cases, heart failure. Children who don't have enough healthy red blood cells grow and develop more slowly than other children. These symptoms show how important red blood cells are to your daily life. \textsuperscript{\cite{Department_2022_rochester}}
+Symptoms of anemia include tiredness, fast heart rate, pale skin, feeling cold, and, in severe cases, heart failure. Children who don't have enough healthy red blood cells grow and develop more slowly than other children. These symptoms show how important red blood cells are to your daily life. \textsuperscript{\cite{RBC-urmcrochester}}
 
 \subsection{White blood cells}
 
-On the other hand, White blood cells (WBCs), also known as leukocytes, are the ones responsible for protecting the human body from infections. As part of the immune system, These cells circulate in the blood and respond to injury or illness. They travel through the bloodstream searching for infections. Then, they notify other WBCs of their location to help defending against attacks from other unknown organisms. Once the army of WBCs arrive, they fight the invader by producing antibody proteins to attach to the organism and destroy it. \textsuperscript{\cite{Attacking_Any_Unknown_2022_clevelandclinic}}
+On the other hand, White blood cells (WBCs), also known as leukocytes, are the ones responsible for protecting the human body from infections. As part of the immune system, These cells circulate in the blood and respond to injury or illness. They travel through the bloodstream searching for infections. Then, they notify other WBCs of their location to help defending against attacks from other unknown organisms. Once the army of WBCs arrive, they fight the invader by producing antibody proteins to attach to the organism and destroy it. \textsuperscript{\cite{WBC-clevelandclinic}}
 
 White blood cells are divided into five types:
 
