--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -54,13 +54,6 @@ isbn="978-3-030-44584-3"
 	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
 }
 
-@article{Attacking_Any_Unknown_2022_clevelandclinic,
-author = {Attacking Any Unknown},
-title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
-year	 = {2022},
-url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
-}
-
 @article{bhavnani2016segmentation,
   title={Segmentation and counting of WBCs and RBCs from microscopic blood sample images},
   author={Bhavnani, Lata A and Jaliya, Udesang K and Joshi, Mahasweta J},
@@ -80,31 +73,25 @@ url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
 	year 			= {1992}
 }
 
-@article{2022_cellavision,
-	author	={Highlighting Interesting Articles},
-	title	={CellaVision News Blast – CellaVision AB},
-	year	={2022},
-	url	={https://blog.cellavision.com/}
-	}@article{CBC-mayoclinic,
+@article{CBC-mayoclinic,
 author = {mayoclinic},
 title	 = {Complete blood count (CBC) - Mayo Clinic},
 year	 = {2022},
 url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about/pac-20384919}
 }
 
+@article{2022_cellavision,
+	author	={cellavision},
+	title	={CellaVision News Blast – CellaVision AB},
+	year	={2022},
+	url	={https://blog.cellavision.com/}
+	}
 @article{CNN-IBM,
 	author	={IBM},
 	title	={What are Convolutional Neural Networks? | IBM},
 	year	={2020},
 	url	={https://www.ibm.com/cloud/learn/convolutional-neural-networks}
-	}@article{Department_2022_rochester,
-author = {Department},
-title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
-year	 = {2022},
-url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
-}
-
-@ARTICLE{fukushima_Neocognitron,
+	}@ARTICLE{fukushima_Neocognitron,
   author={Fukushima, Kunihiko and Miyake, Sei and Ito, Takayuki},
   journal={IEEE Transactions on Systems, Man, and Cybernetics}, 
   title={Neocognitron: A neural network model for a mechanism of visual pattern recognition}, 
@@ -282,6 +269,13 @@ abstract = {Yeast fluorescence microscopic images are widely used to observe the
 	year = {2020}
 } 
 
+@article{RBC-urmcrochester,
+author = {URMC rochester},
+title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
+year	 = {2022},
+url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
+}
+
 @article{SUDHA2020639,
 title = {A novel approach for segmentation and counting of overlapped leukocytes in microscopic blood images},
 journal = {Biocybernetics and Biomedical Engineering},
@@ -321,6 +315,13 @@ abstract = {Leukocytes count in the blood smear images plays an important role i
   author={Tran, Thanh and Minh, Lam Binh and Lee, Suk-Hwan and Kwon, Ki-Ryong},
   year={2019},
   publisher={Preprints}
+}
+
+@article{WBC-clevelandclinic,
+author = {clevelandclinic},
+title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
+year	 = {2022},
+url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
 }
 
 @article{Zheng2018,
