--- a/ressources/bibtex/WBC-clevelandclinic.bib
+++ b/ressources/bibtex/WBC-clevelandclinic.bib
@@ -1,5 +1,5 @@
-@article{Attacking_Any_Unknown_2022_clevelandclinic,
-author = {Attacking Any Unknown},
+@article{WBC-clevelandclinic,
+author = {clevelandclinic},
 title	 = {White Blood Cells: What Are They, Normal Ranges, Role \& Function},
 year	 = {2022},
 url	   = {https://my.clevelandclinic.org/health/body/21871-white-blood-cells}
