--- a/ressources/bibtex/cellavision.bib
+++ b/ressources/bibtex/cellavision.bib
@@ -1,5 +1,5 @@
 @article{2022_cellavision,
-	author	={Highlighting Interesting Articles},
+	author	={cellavision},
 	title	={CellaVision News Blast – CellaVision AB},
 	year	={2022},
 	url	={https://blog.cellavision.com/}
