--- a/ressources/bibtex/RBC-urmcrochester.bib
+++ b/ressources/bibtex/RBC-urmcrochester.bib
@@ -1,5 +1,5 @@
-@article{Department_2022_rochester,
-author = {Department},
+@article{RBC-urmcrochester,
+author = {URMC rochester},
 title  = {What Are Red Blood Cells? - Health Encyclopedia - University of Rochester Medical Center},
 year	 = {2022},
 url	   = {https://www.urmc.rochester.edu/encyclopedia/content.aspx?ContentID=34&ContentTypeID=160}
