Added gradient descent!

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -16,6 +16,7 @@ Machine learning is a branch of artificial intelligence (AI) and computer scienc
   \item \textbf{Support Vector Machines:}
       Support Vector Machine (SVM) is a computer algorithm that learns by example to assign labels to objects. \textsuperscript{\cite{boser1992training}} For instance, an SVM can learn to recognize fraudulent credit card activity by examining hundreds or thousands of fraudulent and nonfraudulent credit card activity reports. Alternatively, an SVM can learn to recognize handwritten digits by examining a large collection of scanned images of handwritten zeroes, ones and so fourth. \textsuperscript{\cite{noble2006support}}
   \item \textbf{Gradient Descent:}
+      Gradient descent is an optimization algorithm used to minimize some function by iteratively moving in the direction of steepest descent as defined by the negative of the gradient. In machine learning, we use gradient descent to update the parameters of our model. Parameters refer to coefficients in Linear Regression and weights in neural networks. \textsuperscript{\cite{DG-ml-cheatsheet}}
 \end{itemize}
 
 \subsection{Deep Learning}
