--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -91,7 +91,14 @@ url	   = {https://www.mayoclinic.org/tests-procedures/complete-blood-count/about
 	title	={What are Convolutional Neural Networks? | IBM},
 	year	={2020},
 	url	={https://www.ibm.com/cloud/learn/convolutional-neural-networks}
-	}@ARTICLE{fukushima_Neocognitron,
+	}@article{DG-ml-cheatsheet,
+author = {ml-cheatsheet},
+title	 = {Gradient Descent — ML Glossary documentation},
+year	 = {2022},
+url	   = {https://ml-cheatsheet.readthedocs.io/en/latest/gradient_descent.html}
+}
+
+@ARTICLE{fukushima_Neocognitron,
   author={Fukushima, Kunihiko and Miyake, Sei and Ito, Takayuki},
   journal={IEEE Transactions on Systems, Man, and Cybernetics}, 
   title={Neocognitron: A neural network model for a mechanism of visual pattern recognition}, 
