Added dataset resume!

--- a/PFE/latex/chap3.tex
+++ b/PFE/latex/chap3.tex
@@ -233,6 +233,10 @@ In this project, the Faster R-CNN algorithm from keras-frcnn for Object Detectio
 
 In this database they use bounding boxes to locate the cells and each bounding box has the type of cell RBC or WBC and platlets. they are using the VOC format as a database architecture.
 
+\section{Dataset resume}
+
+\input{tables/table2.tex}
+
 \newpage
 \section{Conclusion}
 \hspace*{0.16in}
