Added dataset refrences!

--- a/PFE/latex/tables/table2.tex
+++ b/PFE/latex/tables/table2.tex
@@ -8,14 +8,14 @@
   \multicolumn{3}{c|}{\textbf{\begin{tabular}[c]{@{}c@{}}Type of cells\\ (RBC, WBC, Platelets)\end{tabular}}} &
   \cellcolor[HTML]{FFFFFF}\textbf{Type of annotation} &
   \cellcolor[HTML]{FFFFFF}\textbf{Description} \\ \hline
-\cellcolor[HTML]{FFFFFF}ALL-IDB &
+\cellcolor[HTML]{FFFFFF}ALL-IDB \textsuperscript{\cite{pm77-2n23-20}}&
   \cellcolor[HTML]{FFFFFF}108 &
   \multicolumn{1}{c|}{} &
   \multicolumn{1}{c|}{X} &
    &
   \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Location \\ (Centroid of cells)\end{tabular} &
   \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Acute Lymphoblastic\\ Leukemia Image Database\\ for Image Processing\end{tabular} \\ \hline
-\cellcolor[HTML]{FFFFFF}BBBC &
+\cellcolor[HTML]{FFFFFF}BBBC \textsuperscript{\cite{ljosa2012annotated}} &
   \cellcolor[HTML]{FFFFFF}Lots of subdatasets &
   \multicolumn{1}{c|}{X} &
   \multicolumn{1}{c|}{X} &
