Added table3: difference between supervied and unsupervised learning!

--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -7,6 +7,21 @@ In this chapter, we will present artificial intelligence with all of its branche
 \subsection{Definition}
 It is the science and engineering of making intelligent machines, especially intelligent computer programs. It is related to the similar task of using computers to understand human intelligence, but AI does not have to confine itself to methods that are biologically observable. \textsuperscript{\cite{mccarthy2004artificial}}
 
+Artificial intelligence algorithms can be categorised into these four main types:
+
+\begin{itemize}
+    \item \textbf{Supervised learning:}
+        Supervised learning, as the name indicates, has the presence of a supervisor as a teacher. Basically supervised learning is when we teach or train the machine using data that is well labeled. Which means some data is already tagged with the correct answer. After that, the machine is provided with a new set of examples (data) so that the supervised learning algorithm analyses the training data (set of training examples) and produces a correct outcome from labeled data. \textsuperscript{\cite{AITypes-GeeksForGeeks}}
+    \item \textbf{Unsupervised learning:}
+        Unsupervised learning is the training of a machine using information that is neither classified nor labeled and allowing the algorithm to act on that information without guidance. Here the task of the machine is to group unsorted information according to similarities, patterns, and differences without any prior training of data. \textsuperscript{\cite{AITypes-GeeksForGeeks}}
+    \item \textbf{Semi Supervised learning:}
+    \item \textbf{Reinforcement learning:}
+\end{itemize}
+
+\vspace{0.2in}
+
+\input{tables/table3.tex}
+
 \subsection{Machine Learning}
 Machine learning is a branch of artificial intelligence (AI) and computer science which focuses on the use of data and algorithms to imitate the way that humans learn, gradually improving its accuracy. \textsuperscript{\cite{ML-IBM}}
 
