--- a/PFE/latex/main.bib
+++ b/PFE/latex/main.bib
@@ -47,11 +47,24 @@ isbn="978-3-030-44584-3"
   publisher={IEEE}
 }
 
+@article{AITypes-GeeksForGeeks,
+author = {GeeksForGeeks},
+title	 = {Supervised and Unsupervised learning - GeeksforGeeks},
+year	 = {2022},
+url	   = {https://www.geeksforgeeks.org/supervised-unsupervised-learning/}
+}
 @article{Annie_Stuart_What_2022_webmd,
 	author	={Annie Stuart What},
 	title	={Acute Lymphoblastic Leukemia (ALL): Symptoms, Diagnosis, Treatment, Prognosis, and Survival Rate},
 	year	={2022},
 	url	={https://www.webmd.com/cancer/lymphoma/acute-lymphoblastic-leukemia}
+}
+
+@ONLINE {BCCD_Dataset,
+    author = "Shenggan",
+    title  = "BCCD Dataset",
+    year   = "2017",
+    url    = "https://github.com/Shenggan/BCCD_Dataset"
 }
 
 @article{bhavnani2016segmentation,
