--- a/PFE/latex/tables/table2.tex
+++ b/PFE/latex/tables/table2.tex
@@ -29,7 +29,7 @@
    &
   \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}Foreground and\\ Background (mask)\end{tabular} &
   \cellcolor[HTML]{FFFFFF}\begin{tabular}[c]{@{}c@{}}WBC Image Dataset : \\ Fast and Robust Segmentation\\ of White Blood Cell Images\\ by Self-supervized Learning\end{tabular} \\ \hline
-BCCD &
+    BCCD \textsuperscript{\cite{BCCD_Dataset}} &
   364 &
   \multicolumn{1}{c|}{} &
   \multicolumn{1}{c|}{x} &
