Added artificial intelligence image!

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -14,7 +14,7 @@ A blood cell, also called a hematopoietic cell, hemocyte, or hematocyte, is a ce
 \begin{figure}[h]
 \centering
   \vspace{-0.1in}
-    \centerline{\fbox{\includegraphics[width = 4in, height = 3.1in]{../images/BloodCells.jpg}}}
+    \centerline{\includegraphics[width = 4in, height = 3.4in]{../images/BloodCells.jpg}}
     \caption{Blood cells}
 \end{figure}
 
