--- a/PFE/latex/chap4.tex
+++ b/PFE/latex/chap4.tex
@@ -7,6 +7,15 @@ In this chapter, we will present artificial intelligence with all of its branche
 \subsection{Definition}
 It is the science and engineering of making intelligent machines, especially intelligent computer programs. It is related to the similar task of using computers to understand human intelligence, but AI does not have to confine itself to methods that are biologically observable. \textsuperscript{\cite{mccarthy2004artificial}}
 
+\vspace{0.2in}
+
+\begin{figure}[h]
+\centering
+  \vspace{-0.1in}
+    \centerline{\includegraphics[width = 4in, height = 2.2in]{../images/artificial-intelligence.png}}
+    \caption{Artificial Intelligence}
+\end{figure}
+
 Artificial intelligence algorithms can be categorised into these four main types:
 
 \begin{itemize}
